# igvm

./: Cargo.toml
igvm/: Cargo.toml
igvm/src/: c_api.rs  lib.rs  serializer.rs
igvm/src/corim/: cbor.rs  constants.rs  cose.rs  mod.rs
igvm/src/corim/launch_endorsement/: builder.rs  mod.rs  validate.rs
igvm/src/measurement/: snp.rs  tdx.rs  vbs.rs
igvm_c/: cbindgen_igvm_defs.toml
igvm_corim/: Cargo.toml
igvm_corim/src/: builder.rs  cbor.rs  constants.rs  lib.rs  profile.rs  signed.rs  validate.rs
igvm_defs/src/: lib.rs
